# ZSO-ELFs

./: .gitignore  CMakeLists.txt  README.md  ROZWIAZANIE.md  alienos.c  alienos.h  convert.h  emulator.c  emulator.h  graphics.c  graphics.h  main.c  random.c  random.h
src/: main.c
src/alienos/: alienos.c
src/emulator/: alienos.c  emulate.c  emulate.h  emulator.c  params.c  params.h  syscall.c  syscall.h
src/graphics/: graphics.h
src/system/: convert.c  memory.c  memory.h  random.h
